# genote_backend

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  pyproject.toml  test.json
.github/workflows/: deploy.yml
genote_llm/: firebase_utils.py  initial_notes.json  main.py  rag.py  schema2.json  schema_old.json
